JMMParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. JMMParser.java */
import java.util.Stack;

public class JMMParser/*@bgen(jjtree)*/implements JMMParserTreeConstants, JMMParserConstants {/*@bgen(jjtree)*/
  protected JJTJMMParserState jjtree = new JJTJMMParserState();public static int n_errors = 0;

    public static void main(String args[]) throws ParseException {
        JMMParser parser = new JMMParser(System.in);
        SimpleNode root = parser.Program();
        root.dump("");
        System.out.println("\n--------\n");
        root.dumpSymbolTable("");
    }

    private final Stack<NodeWithSymbolTable> symbol_table_scopes = new Stack<>();

    public void jjtreeOpenNodeScope(Node n) {
        if (((SimpleNode) n).hasSymbolTable()) {
            this.symbol_table_scopes.push((NodeWithSymbolTable) n);
        } else {
            if (!symbol_table_scopes.empty()) {
                symbol_table_scopes.peek().registerInSymbolTable((SimpleNode) n);
            }
        }
    }

    public void jjtreeCloseNodeScope(Node n) {
        if (((SimpleNode) n).hasSymbolTable()) {
            this.symbol_table_scopes.pop();
        }
    }

  void recover_while_error() throws ParseException, ErrorLimitReached {
                                                     /*@bgen(jjtree) recover_while_error */
 ASTrecover_while_error jjtn000 = new ASTrecover_while_error(JJTRECOVER_WHILE_ERROR);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);
 jjtreeOpenNodeScope(jjtn000);
 try {if (JMMParser.n_errors >= 10) {
        throw new ErrorLimitReached();
    }

    System.out.printf("Error #%d: ", ++JMMParser.n_errors);
    ParseException e = generateParseException();
    System.out.println(e.toString());

    int n_skipped_chars = 0;

    Token t;
    //skip tokens until first parenthesis is reacherd 
    do {
        t = getNextToken();
        ++n_skipped_chars;
    } while (t.kind != ParenthesisEnd);

    //skip extra parenthesis
    while (getToken(1).kind == ParenthesisEnd) {
        t = getNextToken();
        ++n_skipped_chars;
    }

    System.out.printf("Number of skipped characters to recover from error: %d\u005cn\u005cn", n_skipped_chars);/*@bgen(jjtree)*/
 } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof ErrorLimitReached) {
     throw (ErrorLimitReached)jjte000;
   }
   throw (Error)jjte000;
 } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
     jjtreeCloseNodeScope(jjtn000);
   }
 }
  }

  final public SimpleNode Program() throws ParseException {
                        /*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      ClassDeclaration();
      jj_consume_token(0);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
      {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public void VarDeclaration() throws ParseException {
                         /*@bgen(jjtree) VarDeclaration */
                         ASTVarDeclaration jjtn000 = new ASTVarDeclaration(JJTVARDECLARATION);
                         boolean jjtc000 = true;
                         jjtree.openNodeScope(jjtn000);
                         jjtreeOpenNodeScope(jjtn000);Token t_name;
    try {
      Type();
      t_name = jj_consume_token(Identifier);
      jj_consume_token(Semicolon);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
        jjtn000.identifier = t_name.image;
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void ClassDeclaration() throws ParseException {
                           /*@bgen(jjtree) ClassDeclaration */
                           ASTClassDeclaration jjtn000 = new ASTClassDeclaration(JJTCLASSDECLARATION);
                           boolean jjtc000 = true;
                           jjtree.openNodeScope(jjtn000);
                           jjtreeOpenNodeScope(jjtn000);Token t_name;
    try {
      jj_consume_token(Class);
      t_name = jj_consume_token(Identifier);
                                   jjtn000.name = t_name.image;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Generalization:
        ClassGeneralization();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(BlockStart);
      ClassBody();
      jj_consume_token(BlockEnd);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void ClassGeneralization() throws ParseException {
                              /*@bgen(jjtree) ClassGeneralization */
                              ASTClassGeneralization jjtn000 = new ASTClassGeneralization(JJTCLASSGENERALIZATION);
                              boolean jjtc000 = true;
                              jjtree.openNodeScope(jjtn000);
                              jjtreeOpenNodeScope(jjtn000);Token t_name;
    try {
      jj_consume_token(Generalization);
      t_name = jj_consume_token(Identifier);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
        jjtn000.name = t_name.image;
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void ClassBody() throws ParseException {
                          int n_fields = 0, n_methods = 0;
       ASTClassFields jjtn001 = new ASTClassFields(JJTCLASSFIELDS);
       boolean jjtc001 = true;
       jjtree.openNodeScope(jjtn001);
       jjtreeOpenNodeScope(jjtn001);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TypeInt:
        case TypeBoolean:
        case Identifier:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
        VarDeclaration();
                        n_fields++;
      }
    } catch (Throwable jjte001) {
       if (jjtc001) {
         jjtree.clearNodeScope(jjtn001);
         jjtc001 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte001 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte001;}
       }
       if (jjte001 instanceof ParseException) {
         {if (true) throw (ParseException)jjte001;}
       }
       {if (true) throw (Error)jjte001;}
    } finally {
       if (jjtc001) {
         jjtree.closeNodeScope(jjtn001,  n_fields);
         jjtreeCloseNodeScope(jjtn001);
       }
    }
       ASTClassMethods jjtn002 = new ASTClassMethods(JJTCLASSMETHODS);
       boolean jjtc002 = true;
       jjtree.openNodeScope(jjtn002);
       jjtreeOpenNodeScope(jjtn002);
    try {
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case Public:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(Public);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case Static:
          MainDeclaration();
                                   n_methods++;
          break;
        case TypeInt:
        case TypeBoolean:
        case Identifier:
          MethodDeclaration();
                                                                       n_methods++;
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte002) {
       if (jjtc002) {
         jjtree.clearNodeScope(jjtn002);
         jjtc002 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte002 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte002;}
       }
       if (jjte002 instanceof ParseException) {
         {if (true) throw (ParseException)jjte002;}
       }
       {if (true) throw (Error)jjte002;}
    } finally {
       if (jjtc002) {
         jjtree.closeNodeScope(jjtn002,  n_methods);
         jjtreeCloseNodeScope(jjtn002);
       }
    }
  }

  final public void Type() throws ParseException {
               /*@bgen(jjtree) Type */
               ASTType jjtn000 = new ASTType(JJTTYPE);
               boolean jjtc000 = true;
               jjtree.openNodeScope(jjtn000);
               jjtreeOpenNodeScope(jjtn000);Token t_type; boolean is_array = false;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TypeInt:
        t_type = jj_consume_token(TypeInt);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ArrayStart:
          Array();
                                       is_array = true;
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        break;
      case TypeBoolean:
        t_type = jj_consume_token(TypeBoolean);
        break;
      case Identifier:
        t_type = jj_consume_token(Identifier);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
        jjtn000.type = t_type.image;
        jjtn000.isArray = is_array;
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void Array() throws ParseException {
    jj_consume_token(ArrayStart);
    jj_consume_token(ArrayEnd);
  }

  final public void MainDeclaration() throws ParseException {
                          /*@bgen(jjtree) MainDeclaration */
  ASTMainDeclaration jjtn000 = new ASTMainDeclaration(JJTMAINDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(Static);
      jj_consume_token(Void);
      jj_consume_token(Main);
      jj_consume_token(ParenthesisStart);
      jj_consume_token(TypeString);
      Array();
      jj_consume_token(Identifier);
      jj_consume_token(ParenthesisEnd);
      jj_consume_token(BlockStart);
      VarsAndBody();
      jj_consume_token(BlockEnd);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void MethodDeclaration() throws ParseException {
                            /*@bgen(jjtree) MethodDeclaration */
                            ASTMethodDeclaration jjtn000 = new ASTMethodDeclaration(JJTMETHODDECLARATION);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);
                            jjtreeOpenNodeScope(jjtn000);Token t_name;
    try {
      Type();
      t_name = jj_consume_token(Identifier);
                                  jjtn000.name = t_name.image;
      jj_consume_token(ParenthesisStart);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TypeInt:
      case TypeBoolean:
      case Identifier:
        MethodParameters();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(ParenthesisEnd);
      jj_consume_token(BlockStart);
      VarsAndBody();
      jj_consume_token(Return);
                    ASTReturn jjtn001 = new ASTReturn(JJTRETURN);
                    boolean jjtc001 = true;
                    jjtree.openNodeScope(jjtn001);
                    jjtreeOpenNodeScope(jjtn001);
      try {
        Expression();
      } catch (Throwable jjte001) {
                    if (jjtc001) {
                      jjtree.clearNodeScope(jjtn001);
                      jjtc001 = false;
                    } else {
                      jjtree.popNode();
                    }
                    if (jjte001 instanceof RuntimeException) {
                      {if (true) throw (RuntimeException)jjte001;}
                    }
                    if (jjte001 instanceof ParseException) {
                      {if (true) throw (ParseException)jjte001;}
                    }
                    {if (true) throw (Error)jjte001;}
      } finally {
                    if (jjtc001) {
                      jjtree.closeNodeScope(jjtn001,  1);
                      jjtreeCloseNodeScope(jjtn001);
                    }
      }
      jj_consume_token(Semicolon);
      jj_consume_token(BlockEnd);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void VarsAndBody() throws ParseException {
    label_3:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_3;
      }
      VarDeclaration();
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IntegerLiteral:
      case NotOp:
      case True:
      case False:
      case This:
      case New:
      case If:
      case While:
      case Identifier:
      case BlockStart:
      case ParenthesisStart:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      Statement();
    }
  }

  final public void MethodParameters() throws ParseException {
                           /*@bgen(jjtree) MethodParameters */
                            ASTMethodParameters jjtn000 = new ASTMethodParameters(JJTMETHODPARAMETERS);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);
                            jjtreeOpenNodeScope(jjtn000);Token t_parameter_name;
    try {
      Type();
      t_parameter_name = jj_consume_token(Identifier);
                                       ASTMethodParameter jjtn001 = new ASTMethodParameter(JJTMETHODPARAMETER);
                                       boolean jjtc001 = true;
                                       jjtree.openNodeScope(jjtn001);
                                       jjtreeOpenNodeScope(jjtn001);
      try {
                                       jjtree.closeNodeScope(jjtn001,  1);
                                       jjtc001 = false;
                                       jjtreeCloseNodeScope(jjtn001);
                                      jjtn001.name = t_parameter_name.image;
      } finally {
                                       if (jjtc001) {
                                         jjtree.closeNodeScope(jjtn001,  1);
                                         jjtreeCloseNodeScope(jjtn001);
                                       }
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case Comma:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_5;
        }
        jj_consume_token(Comma);
        Type();
        t_parameter_name = jj_consume_token(Identifier);
                                           ASTMethodParameter jjtn002 = new ASTMethodParameter(JJTMETHODPARAMETER);
                                           boolean jjtc002 = true;
                                           jjtree.openNodeScope(jjtn002);
                                           jjtreeOpenNodeScope(jjtn002);
        try {
                                           jjtree.closeNodeScope(jjtn002,  1);
                                           jjtc002 = false;
                                           jjtreeCloseNodeScope(jjtn002);
                                          jjtn002.name = t_parameter_name.image;
        } finally {
                                           if (jjtc002) {
                                             jjtree.closeNodeScope(jjtn002,  1);
                                             jjtreeCloseNodeScope(jjtn002);
                                           }
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BlockStart:
      jj_consume_token(BlockStart);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IntegerLiteral:
        case NotOp:
        case True:
        case False:
        case This:
        case New:
        case If:
        case While:
        case Identifier:
        case BlockStart:
        case ParenthesisStart:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_6;
        }
        Statement();
      }
      jj_consume_token(BlockEnd);
      break;
    case If:
      IfStatement();
      break;
    case While:
      WhileStatement();
      break;
    case IntegerLiteral:
    case NotOp:
    case True:
    case False:
    case This:
    case New:
    case Identifier:
    case ParenthesisStart:
      Expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Equals:
        Assignment();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(Semicolon);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void IfStatement() throws ParseException {
                      /*@bgen(jjtree) IfStatement */
  ASTIfStatement jjtn000 = new ASTIfStatement(JJTIFSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(If);
      jj_consume_token(ParenthesisStart);
      Expression();
      jj_consume_token(ParenthesisEnd);
           ASTIfBody jjtn001 = new ASTIfBody(JJTIFBODY);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
           jjtreeOpenNodeScope(jjtn001);
      try {
        Statement();
      } catch (Throwable jjte001) {
           if (jjtc001) {
             jjtree.clearNodeScope(jjtn001);
             jjtc001 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte001 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte001;}
           }
           if (jjte001 instanceof ParseException) {
             {if (true) throw (ParseException)jjte001;}
           }
           {if (true) throw (Error)jjte001;}
      } finally {
           if (jjtc001) {
             jjtree.closeNodeScope(jjtn001, true);
             jjtreeCloseNodeScope(jjtn001);
           }
      }
      jj_consume_token(Else);
           ASTElseBody jjtn002 = new ASTElseBody(JJTELSEBODY);
           boolean jjtc002 = true;
           jjtree.openNodeScope(jjtn002);
           jjtreeOpenNodeScope(jjtn002);
      try {
        Statement();
      } catch (Throwable jjte002) {
           if (jjtc002) {
             jjtree.clearNodeScope(jjtn002);
             jjtc002 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte002 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte002;}
           }
           if (jjte002 instanceof ParseException) {
             {if (true) throw (ParseException)jjte002;}
           }
           {if (true) throw (Error)jjte002;}
      } finally {
           if (jjtc002) {
             jjtree.closeNodeScope(jjtn002, true);
             jjtreeCloseNodeScope(jjtn002);
           }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void WhileStatement() throws ParseException {
                         /*@bgen(jjtree) WhileStatement */
  ASTWhileStatement jjtn000 = new ASTWhileStatement(JJTWHILESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(While);
      jj_consume_token(ParenthesisStart);
      try {
        Expression();
        jj_consume_token(ParenthesisEnd);
      } catch (ParseException e) {
        recover_while_error();
      }
       ASTWhileBody jjtn001 = new ASTWhileBody(JJTWHILEBODY);
       boolean jjtc001 = true;
       jjtree.openNodeScope(jjtn001);
       jjtreeOpenNodeScope(jjtn001);
      try {
        Statement();
      } catch (Throwable jjte001) {
       if (jjtc001) {
         jjtree.clearNodeScope(jjtn001);
         jjtc001 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte001 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte001;}
       }
       if (jjte001 instanceof ParseException) {
         {if (true) throw (ParseException)jjte001;}
       }
       {if (true) throw (Error)jjte001;}
      } finally {
       if (jjtc001) {
         jjtree.closeNodeScope(jjtn001, true);
         jjtreeCloseNodeScope(jjtn001);
       }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void Assignment() throws ParseException {
    jj_consume_token(Equals);
                ASTAssignmentStatement jjtn001 = new ASTAssignmentStatement(JJTASSIGNMENTSTATEMENT);
                boolean jjtc001 = true;
                jjtree.openNodeScope(jjtn001);
                jjtreeOpenNodeScope(jjtn001);
    try {
      Expression();
    } catch (Throwable jjte001) {
                if (jjtc001) {
                  jjtree.clearNodeScope(jjtn001);
                  jjtc001 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte001 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte001;}
                }
                if (jjte001 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte001;}
                }
                {if (true) throw (Error)jjte001;}
    } finally {
                if (jjtc001) {
                  jjtree.closeNodeScope(jjtn001,  2);
                  jjtreeCloseNodeScope(jjtn001);
                }
    }
  }

  final public void Expression() throws ParseException {
    AndExpression();
  }
